--- a/PCA_Code.Rmd
+++ b/PCA_Code.Rmd
@@ -118,7 +118,7 @@ corrplot(dataPCA$var$contrib, is.corr=FALSE)
 fviz_pca_biplot(dataPCA, repel = TRUE)
 ```
 
-<h3 style="color:blue">L'axe 1 de l'ACP est caractérisé par les variables et espèces d'oiseaux qui ont une forte contribution positive ou négative. Sur cet axe, nous observons que les mois de Janvier, Mars, Juin et Novembre ont des valeurs élevées sur Dim.1, ce qui indique qu'ils sont positivement associés à la présence des espèces suivantes : Corneille Noir, Pie Bavarde, Perruche à collier, Rougegorge familier, Mésange bleue, Mésange Charbonnière, Merle Noir, Trigolodyte Mignon et Grimpereau des Jardins. Cela suggère que ces espèces sont plus fréquemment observées pendant ces mois.</h3>
+<h3 style="color:blue">L'axe 1 de l'ACP est caractérisé par les variables et espèces d'oiseaux qui ont une forte contribution positive ou négative. Sur cet axe, nous observons que les mois de Janvier, Mars, Juin et Novembre ont des valeurs élevées sur Dim.1, ce qui indique qu'ils sont positivement associés à la présence des espèces suivantes : Corneille Noir, Pie Bavarde, Perruche à collier, Rougegorge familier, Mésange bleue, Mésange Charbonnière, Merle Noir, Trigolodyte Mignon et Grimpereau des Jardins. Cela suggère que ces espèces sont plus fréquemment observées pendant ces mois. On peut le confirmer pour la Perruche à collier qui est le plus observé en janvier et en Mars avec respectivement 18 et 16 observations.</h3>
 
 <h3 style="color:blue">L'axe 2 de l'ACP est caractérisé par les variables et espèces d'oiseaux qui ont une forte contribution positive ou négative. Sur cet axe, nous observons que les mois de Mars, Mai et Janvier ont des valeurs élevées sur Dim.2, ce qui indique une association positive avec la présence des Pigeon Ramier et Pigeon Biset. Ces mois sont donc associés à une fréquence plus élevée d'observations de ces espèces.</h3>
 
