--- a/preliminary_analysis_linear_regression_code.ipynb
+++ b/preliminary_analysis_linear_regression_code.ipynb
@@ -354,7 +354,7 @@
    "execution_count": 74,
    "id": "b6c7f4fa",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -481,7 +481,9 @@
    "cell_type": "code",
    "execution_count": 77,
    "id": "2241e9fe",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -974,73 +976,6 @@
     "#Suppression des espèces n'ayant pas été observé pour au mois un mois\n",
     "data_2=data.drop(species_null,axis=1)\n",
     "data_2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "id": "dfb35049",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Mois\n",
-       "janvier      179\n",
-       "mars         177\n",
-       "juin         134\n",
-       "novembre     121\n",
-       "septembre    119\n",
-       "aout          98\n",
-       "mai           92\n",
-       "fevrier       74\n",
-       "juillet       69\n",
-       "octobre       67\n",
-       "avril         61\n",
-       "decembre      38\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_2.sum(axis=1).sort_values(ascending=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "id": "3b4bc740",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Pigeon ramier             232\n",
-       "Merle noir                179\n",
-       "Corneille noire           161\n",
-       "Rougegorge familier       102\n",
-       "Mésange bleue             100\n",
-       "Perruche à collier         99\n",
-       "Mésange charbonnière       88\n",
-       "Pie bavarde                75\n",
-       "Pigeon biset               63\n",
-       "Troglodyte mignon          61\n",
-       "Grimpereau des jardins     44\n",
-       "Geai des chênes            25\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_2.sum(axis=0).sort_values(ascending=False)"
    ]
   },
   {
@@ -2270,8 +2205,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e68bfaf0",
+   "metadata": {},
+   "source": [
+    "<h3 style=\"color:blue\"> \n",
+    "\n",
+    "Pour calculer toutes les combinaison distincte possible il faut utiliser la formule suivante : \n",
+    "<br><hr>\n",
+    "Total des combinaison possible = $\\sum_{k=1}^{11} \\binom{11}{k}$\n",
+    "<br><hr>\n",
+    "Retranscrivons ça en code.\n",
+    "</h3>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 123,
    "id": "7fbe8ca5",
    "metadata": {},
    "outputs": [
@@ -2299,23 +2249,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 124,
    "id": "405f2f44",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\imadr\\anaconda3\\lib\\site-packages\\statsmodels\\regression\\linear_model.py:1728: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "  return 1 - (np.divide(self.nobs - self.k_constant, self.df_resid)\n",
-      "C:\\Users\\imadr\\anaconda3\\lib\\site-packages\\statsmodels\\regression\\linear_model.py:1728: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  return 1 - (np.divide(self.nobs - self.k_constant, self.df_resid)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialiser une liste pour stocker les résultats\n",
     "resultats_combinaisons = []\n",
@@ -2323,6 +2262,9 @@
     "meilleure_combinaison = None\n",
     "meilleure_paramètre = None\n",
     "meilleure_resultat = None\n",
+    "alpha=0.05\n",
+    "\n",
+    "c=0\n",
     "# Effectuer la régression linéaire pour chaque combinaison\n",
     "for combinaison in combinaisons:\n",
     "    #Ajout de la constante à la matrice de la combinaison de variables\n",
@@ -2338,12 +2280,14 @@
     "    coeffs = resultats.params\n",
     "    r2 = resultats.rsquared_adj\n",
     "    \n",
+    "    \n",
     "    #recuperation du meilleur r2 avec la combinaison, les coeficient, et le details du résultat associé\n",
     "    if r2 > meilleur_r2:\n",
     "        meilleur_r2 = r2\n",
     "        meilleure_combinaison = combinaison\n",
     "        meilleure_paramètre = coeffs\n",
     "        meilleure_resultat = resultats\n",
+    "    \n",
     "    \n",
     "    # Ajouter les résultats à la liste\n",
     "    resultats_combinaisons.append((combinaison, coeffs, r2))\n",
@@ -2356,7 +2300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 125,
    "id": "ee2682c9",
    "metadata": {},
    "outputs": [
@@ -2447,7 +2391,7 @@
        "Corneille n...  0.846143  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2685,7 +2629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 139,
    "id": "6afa8cf7",
    "metadata": {},
    "outputs": [
@@ -2693,14 +2637,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nombre de modèles avec une relation linéaire significative : 455\n"
+      "Nombre de modèles avec une relation linéaire significative : 411\n"
      ]
     }
    ],
    "source": [
     "# Initialiser une liste pour stocker les résultats\n",
     "resultats_combinaisons = []\n",
-    "\n",
+    "alpha = 0.05\n",
     "\n",
     "# Effectuer la régression linéaire pour chaque combinaison\n",
     "for combinaison in combinaisons:\n",
@@ -2718,7 +2662,7 @@
     "    #p_values = resultats.pvalues.drop('const')  # Exclure la constante\n",
     "    f_stat = resultats.f_pvalue\n",
     "    \n",
-    "    if (f_stat < alpha) :\n",
+    "    if (f_stat < alpha) and (resultats.rsquared_adj > 0.5) :\n",
     "        # Ajouter les résultats à la liste\n",
     "        resultats_combinaisons.append((combinaison, resultats.params, resultats.rsquared_adj,resultats.f_pvalue,resultats.pvalues))\n",
     "\n",
@@ -2735,7 +2679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 141,
    "id": "759fafc9",
    "metadata": {},
    "outputs": [
@@ -2769,7 +2713,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>451</th>\n",
+       "      <th>407</th>\n",
        "      <td>(Corneille noire, Geai des chênes, Grimpereau ...</td>\n",
        "      <td>const                    -1.976852\n",
        "Corneille n...</td>\n",
@@ -2779,7 +2723,7 @@
        "Corneille n...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>454</th>\n",
+       "      <th>410</th>\n",
        "      <td>(Corneille noire, Geai des chênes, Grimpereau ...</td>\n",
        "      <td>const                    -2.579226\n",
        "Corneille n...</td>\n",
@@ -2789,7 +2733,7 @@
        "Corneille n...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>453</th>\n",
+       "      <th>409</th>\n",
        "      <td>(Corneille noire, Geai des chênes, Mésange ble...</td>\n",
        "      <td>const                 -6.071198\n",
        "Corneille noir...</td>\n",
@@ -2799,7 +2743,7 @@
        "Corneille noir...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>428</th>\n",
+       "      <th>384</th>\n",
        "      <td>(Corneille noire, Geai des chênes, Grimpereau ...</td>\n",
        "      <td>const                    -0.300348\n",
        "Corneille n...</td>\n",
@@ -2809,7 +2753,7 @@
        "Corneille n...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>452</th>\n",
+       "      <th>408</th>\n",
        "      <td>(Corneille noire, Geai des chênes, Grimpereau ...</td>\n",
        "      <td>const                    -0.087544\n",
        "Corneille n...</td>\n",
@@ -2824,38 +2768,38 @@
       ],
       "text/plain": [
        "                                           Combinaison  \\\n",
-       "451  (Corneille noire, Geai des chênes, Grimpereau ...   \n",
-       "454  (Corneille noire, Geai des chênes, Grimpereau ...   \n",
-       "453  (Corneille noire, Geai des chênes, Mésange ble...   \n",
-       "428  (Corneille noire, Geai des chênes, Grimpereau ...   \n",
-       "452  (Corneille noire, Geai des chênes, Grimpereau ...   \n",
+       "407  (Corneille noire, Geai des chênes, Grimpereau ...   \n",
+       "410  (Corneille noire, Geai des chênes, Grimpereau ...   \n",
+       "409  (Corneille noire, Geai des chênes, Mésange ble...   \n",
+       "384  (Corneille noire, Geai des chênes, Grimpereau ...   \n",
+       "408  (Corneille noire, Geai des chênes, Grimpereau ...   \n",
        "\n",
        "                                          Coefficients    R2_adj  \\\n",
-       "451  const                    -1.976852\n",
+       "407  const                    -1.976852\n",
        "Corneille n...  0.870743   \n",
-       "454  const                    -2.579226\n",
+       "410  const                    -2.579226\n",
        "Corneille n...  0.858645   \n",
-       "453  const                 -6.071198\n",
+       "409  const                 -6.071198\n",
        "Corneille noir...  0.795950   \n",
-       "428  const                    -0.300348\n",
+       "384  const                    -0.300348\n",
        "Corneille n...  0.778445   \n",
-       "452  const                    -0.087544\n",
+       "408  const                    -0.087544\n",
        "Corneille n...  0.770989   \n",
        "\n",
        "     Fischer_stat                                            P_value  \n",
-       "451      0.016071  const                     0.328686\n",
+       "407      0.016071  const                     0.328686\n",
        "Corneille n...  \n",
-       "454      0.046321  const                     0.288173\n",
+       "410      0.046321  const                     0.288173\n",
        "Corneille n...  \n",
-       "453      0.038217  const                  0.053085\n",
+       "409      0.038217  const                  0.053085\n",
        "Corneille noir...  \n",
-       "428      0.021842  const                     0.891350\n",
+       "384      0.021842  const                     0.891350\n",
        "Corneille n...  \n",
-       "452      0.047384  const                     0.969296\n",
+       "408      0.047384  const                     0.969296\n",
        "Corneille n...  "
       ]
      },
-     "execution_count": 118,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2866,7 +2810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 142,
    "id": "e668b099",
    "metadata": {},
    "outputs": [
